--- a/styles.css
+++ b/styles.css
@@ -73,13 +73,23 @@ body
 {
   border-radius: 50px;
   /* padding:2% 10%; */
-  padding:2% 5%;
-  margin:3%;
+  padding:1% 3%;
+  /* margin:3%; */
   /* width: 100%;
   margin: 0 auto; */
   align-content: center;
 
 }
+/* .navbar-links
+{
+  width:20px;
+  transition:width 0.5s;
+}
+
+.navbar-links:hover
+{
+  width:25px;
+} */
 
 .button-text
 {
@@ -88,4 +98,21 @@ body
   margin: 0;
   font-weight: 900;
   font-size: 1.5rem;
+}
+
+
+.form-plank
+{
+  margin:3% 0 0 0 ;
+}
+
+#emailHelp
+{
+  padding:2%;
+}
+
+.input-form
+{
+  font-family:"Montserrat", sans-serif;
+
 }
